support evaluate condition-type: quantity
